--- a/tutorapp/templates/base.html
+++ b/tutorapp/templates/base.html
@@ -14,20 +14,20 @@
 
     <link rel="shortcut icon" href="{% static " img/favicon.ico " %}">
     {% ifinstalled mezzanine.blog %}
-        <link rel="alternate" type="application/rss+xml" title="RSS" href="{% url " blog_post_feed " "rss " %}">
+        <link rel="alternate" type="application/rss+xml" title="RSS" href="{% url "blog_post_feed" "rss" %}">
         <link rel="alternate" type="application/atom+xml" title="Atom"
-              href="{% url " blog_post_feed " "atom " %}">
+              href="{% url "blog_post_feed" "atom" %}">
     {% endifinstalled %}
 
     {% compress css %}
-        <link rel="stylesheet" href="{% static " css/bootstrap.css " %}">
-        <link rel="stylesheet" href="{% static " css/mezzanine.css " %}">
-        <link rel="stylesheet" href="{% static " css/bootstrap-theme.css " %}"> {% if LANGUAGE_BIDI %}
-        <link rel="stylesheet" href="{% static " css/bootstrap-rtl.css " %}"> {% endif %}
+        <link rel="stylesheet" href="{% static "css/bootstrap.css" %}">
+        <link rel="stylesheet" href="{% static "css/mezzanine.css" %}">
+        <link rel="stylesheet" href="{% static "css/bootstrap-theme.css" %}"> {% if LANGUAGE_BIDI %}
+        <link rel="stylesheet" href="{% static "css/bootstrap-rtl.css" %}"> {% endif %}
         {% ifinstalled cartridge.shop %}
-            <link rel="stylesheet" href="{% static " css/cartridge.css " %}">
+            <link rel="stylesheet" href="{% static "css/cartridge.css" %}">
             {% if LANGUAGE_BIDI %}
-                <link rel="stylesheet" href="{% static " css/cartridge.rtl.css " %}">
+                <link rel="stylesheet" href="{% static "css/cartridge.rtl.css" %}">
             {% endif %}
         {% endifinstalled %}
     {% block extra_css %}{% endblock %}
@@ -94,16 +94,19 @@
     <div class="row">
 
         <div class="col-md-2 left">
+            <h1 class="text-left" style="color:red;">Left</h1>
             {% block left_panel %}
                 <div class="panel panel-default tree">{% page_menu "pages/menus/tree.html" %}</div>
             {% endblock %}
         </div>
 
         <div class="col-md-7 middle">
-            <h1 style="color:red;">Main</h1>{% block main %}{% endblock %}
+            <h1 class="text-center" style="color:red;">Main</h1>
+            {% block main %}{% endblock %}
         </div>
 
         <div class="col-md-3 right">
+            <h1 class="text-right" style="color:red;">Right</h1>
             {% nevercache %} {% include "includes/language_selector.html" %}
                 {% include "includes/user_panel.html" %} {% endnevercache %}
             <div class="panel panel-default">
