--- a/tutorapp/templates/base.html
+++ b/tutorapp/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="{{ LANGUAGE_CODE }}" {% if LANGUAGE_BIDI %} dir="rtl" {% endif %}>
 {% load pages_tags mezzanine_tags i18n staticfiles %}
+{% spaceless %}
 
 <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -12,7 +13,8 @@
         {% block meta_title %}{% endblock %}{% if settings.SITE_TITLE %} | {{ settings.SITE_TITLE }}{% endif %}
     </title>
 
-    <link rel="shortcut icon" href="{% static " img/favicon.ico " %}">
+    <link rel="shortcut icon" href="{% static "img/favicon.ico" %}">
+
     {% ifinstalled mezzanine.blog %}
         <link rel="alternate" type="application/rss+xml" title="RSS" href="{% url "blog_post_feed" "rss" %}">
         <link rel="alternate" type="application/atom+xml" title="Atom"
@@ -24,19 +26,21 @@
         <link rel="stylesheet" href="{% static "css/mezzanine.css" %}">
         <link rel="stylesheet" href="{% static "css/bootstrap-theme.css" %}"> {% if LANGUAGE_BIDI %}
         <link rel="stylesheet" href="{% static "css/bootstrap-rtl.css" %}"> {% endif %}
+
         {% ifinstalled cartridge.shop %}
             <link rel="stylesheet" href="{% static "css/cartridge.css" %}">
             {% if LANGUAGE_BIDI %}
                 <link rel="stylesheet" href="{% static "css/cartridge.rtl.css" %}">
             {% endif %}
         {% endifinstalled %}
-    {% block extra_css %}{% endblock %}
+
+        {% block extra_css %}{% endblock %}
     {% endcompress %}
 
     {% compress js %}
-        <script src="{% static " mezzanine/js/ "|add:settings.JQUERY_FILENAME %}"></script>
-        <script src="{% static " js/bootstrap.js " %}"></script>
-        <script src="{% static " js/bootstrap-extras.js " %}"></script>
+        <script src="{% static "mezzanine/js/"|add:settings.JQUERY_FILENAME %}"></script>
+        <script src="{% static "js/bootstrap.js" %}"></script>
+        <script src="{% static "js/bootstrap-extras.js" %}"></script>
         {% block extra_js %}{% endblock %}
     {% endcompress %}
 
@@ -48,9 +52,9 @@
     {% block extra_head %}{% endblock %}
 </head>
 
-<body id="{% block body_id %}body{% endblock %}">
+<body style="padding-top: 8%" id="{% block body_id %}body{% endblock %}">
 
-<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+<div class="navbar navbar-default navbar-fixed-top" style="height: 8%; padding: 1%" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -59,18 +63,27 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            {% if settings.SITE_TITLE %}<a class="navbar-brand" href="/">{{ settings.SITE_TITLE }}</a>{% endif %}
-            {% if settings.SITE_TAGLINE %}<p class="navbar-text visible-lg">{{ settings.SITE_TAGLINE }}</p>{% endif %}
+
+            <a class=" " href="/">
+                <img class="img-responsive" style="height: 60px; margin-right: 20%;" src="{% static "img/JOSLogo121615.png" %}" alt="JOS Logo">
+            </a>
+
+            <!--
+                {% if settings.SITE_TITLE %}<a class="" href="/">xxx{{ settings.SITE_TITLE }}</a>{% endif %}
+                {% if settings.SITE_TAGLINE %}<p class="navbar-text visible-lg">{{ settings.SITE_TAGLINE }}</p>{% endif %}
+            -->
         </div>
-        <div class="navbar-collapse collapse">
-            {% search_form "all" %} {% page_menu "pages/menus/dropdown.html" %}
+
+        <div class="navbar-collapse collapse" style="font-size: 16pt; padding: 1%;">
+            {% page_menu "pages/menus/dropdown.html" %}
         </div>
     </div>
 </div>
 
 <div class="container">
 
-    {% nevercache %} {% if messages %}
+    {% nevercache %}
+    {% if messages %}
         <div class="messages">
             {% for message in messages %}
                 <div class="alert alert-dismissable alert-{{ message.tags }}" data-alert="alert">
@@ -79,13 +92,15 @@
                 </div>
             {% endfor %}
         </div>
-    {% endif %} {% endnevercache %}
+    {% endif %}
+    {% endnevercache %}
 
-    <h1>{% block title %}{% endblock %}</h1>
+    <h1>xxx{% block title %}{% endblock %}</h1>
 
     <ul class="breadcrumb">
-        {% spaceless %}
-            {% block breadcrumb_menu %}{% page_menu "pages/menus/breadcrumb.html" %}{% endblock %} {% endspaceless %}
+        {% block breadcrumb_menu %}
+            {% page_menu "pages/menus/breadcrumb.html" %}
+        {% endblock %}
     </ul>
 
 </div>
@@ -127,14 +142,17 @@
         <div class="row">
             <p class="site-info text-center">
                 {% trans "Powered by" %}
-                <a href="http://mezzanine.jupo.org">Mezzanine</a>{% ifinstalled cartridge.shop %},
-                <a href="http://cartridge.jupo.org">Cartridge</a>{% endifinstalled %} {% trans "and" %}
+                <a href="http://mezzanine.jupo.org">Mezzanine</a>
+                {% ifinstalled cartridge.shop %}, <a href="http://cartridge.jupo.org">Cartridge</a>{% endifinstalled %}
+                {% trans "and" %}
                 <a href="http://www.djangoproject.com">Django</a>
                 <span class="separator">|</span>
                 {% trans "Theme by" %} <a target="_blank" href="http://getbootstrap.com">Bootstrap</a>
+
                 {% ifinstalled mezzanine.mobile %}
                     <span class="separator">|</span>
-                    <a href="{% url " set_device " "mobile " %}?next={{ request.path }}">{% trans "View Mobile Site" %}</a> {% endifinstalled %}
+                    <a href="{% url " set_device " "mobile " %}?next={{ request.path }}">{% trans "View Mobile Site" %}</a>
+                {% endifinstalled %}
             </p>
         </div>
     </div>
@@ -143,5 +161,5 @@
 {% include "includes/footer_scripts.html" %}
 
 </body>
-
+{% endspaceless %}
 </html>
